critical path finding and updating on_cp during snapshot registration and also updating net delay to 0 for non critical tasks during performance calculation
