# routes/index.js
@@ -2,7 +2,10 @@ const express = require('express');
 let {param, check} = require('express-validator');
 const scrapeController = require('../controllers/scrapeController');
 const projectSummaryController = require('../controllers/projectSummaryController');
+const criticalPathController = require('../controllers/criticalPathController');
+
 const checks_Errors_warnings = require('../middlewares/checks');
+
 const router = express.Router();
 
 //**validation required */
@@ -22,11 +25,11 @@ router.get('/performance', projectSummaryController.performanceMetrics);
 router.post('/add-note', projectSummaryController.addNote);
 router.get('/get-notes/:id', projectSummaryController.getNote);
 router.get('/latest-project-summary', projectSummaryController.loadLatestProjectSummary);
-
+router.delete('/snapshot', projectSummaryController.deleteSnapshot);
+router.get('/criticalPath', criticalPathController.criticalPath);
 
 //**NO validation required */
 router.get('/all-projects', projectSummaryController.allProjects);
 router.get('/task-contributors', projectSummaryController.taskContributors);
-
 
 module.exports = router;
